<resources>
    <string name="app_name">Richplay</string>
    <string name="version">V1.0.1</string>
    <string name="loading">Loding...</string>
    <string name="no_sdcard_tip">未检測到SD卡,數據將緩存到手機內存中</string>
    <string name="app_running">richplay正在運行.......</string>
    <string name="takePhoto">拍</string>
    <string name="checkSD">請检查SD卡~</string>
    <string name="release">髮佈</string>
    <string name="release_success">上傳成功</string>
    <string name="releasePic">髮佈圖片</string>
    <string name="add">添加</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="album">相冊：</string>
    <string name="selectAlbum">請選擇相冊~</string>
    <string name="send_request_ing">正在髮送請求，請稍後...</string>
    <string name="timeOut">請求超時，請稍後再試</string>
    <string name="error_net">網絡異常，检查網絡</string>
    <string name="error_fwq">服務器異常，請稍後再試...</string>
    <string name="send">髮送</string>
    <string name="capture_tip">請將條碼置於取景框內掃描</string>
    <string name="bar_code_scan">掃描</string>
    <string name="account">電子郵件</string>
    <string name="password">密碼</string>
    <string name="login">登錄</string>
    <string name="register">註冊Richplay賬戶</string>
    <string name="btn_register">註冊</string>
    <string name="nick_name">暱稱</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松開刷新數據</string>
    <string name="xlistview_header_hint_loading">Loding...</string>
    <string name="xlistview_header_last_time">上次更新時間：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松開載入更多</string>
    <string name="isguanzhu">正在關註</string>
    <string name="beiguanzhu">被關註</string>
    <string name="fayan">%1$s髮言</string>
    <string name="guanzhu2">%1$s關註</string>
    <string name="woguanzhu">%1$s我關註</string>
    <string name="guanzhuwo">%1$s關註我</string>
    <string name="fanyan2">發言</string>
    <string name="yonghu">用戶</string>
    <string name="editUser">編輯個人資料</string>
    <string name="changehead">更換頭像</string>
    <string name="xingbie">性別</string>
    <string name="xiugaimima">修改密碼</string>
    <string name="geren">個人簡介</string>
    <string name="jiaoyu">教育學校</string>
    <string name="renzhi">任職公司</string>
    <string name="wolaifayan">我來發言</string>
    <string name="addguanzhu">添加關注</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_back">Back</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_done">Done</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_google_shopper">Shopper</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google Books</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="captcha">驗證碼</string>
    <string name="oldPwd">原密碼</string>
    <string name="newPwd">新密碼</string>
    <string name="search">搜索</string>
    <string name="main_page">主頁</string>
    <string name="person_info">個人資料</string>
    <string name="guanyu">關于</string>
    <string name="banbengengxin">版本更新</string>
    <string name="clear_cache">清除緩存</string>
    <string name="zhuxiao">注銷</string>
    <string name="more">更多</string>
    <string name="mail">郵箱地址</string>
    <string name="modpwd">修改密碼</string>
    <string name="scholl">教育學校</string>
    <string name="company">任職公司</string>
    <string name="name">姓名</string>
    <string name="address">地址</string>
    <string name="zip_code">郵編</string>
    <string name="phone">電話</string>
</resources>