<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <com.yingqida.richplay.widget.PullToRefreshView
        android:id="@+id/pullToRefreshView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="3dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Color_White"
                    android:gravity="center_vertical" >

                    <EditText
                        android:id="@+id/etUname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" >

                        <requestFocus />
                    </EditText>

                    <ImageView
                        android:id="@+id/imgHead"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:src="@drawable/tab_center_g" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <EditText
                    android:id="@+id/etSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Color_White"
                    android:ems="10" />

                <TextView
                    android:id="@+id/tvMore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/Color_White"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/more" />

                <LinearLayout
                    android:id="@+id/frameMoreInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Color_White"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:ems="10"
                            android:hint="@string/mail" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray" />

                        <TextView
                            android:id="@+id/tvPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/modpwd" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray" />

                        <EditText
                            android:id="@+id/etSchool"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/scholl" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray" />

                        <EditText
                            android:id="@+id/etCompany"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/company" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/Color_White"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/etRealname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/name" />

                        <EditText
                            android:id="@+id/etAddr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/address" />

                        <EditText
                            android:id="@+id/etZipcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/zip_code" />

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/phone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/confirm" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.yingqida.richplay.widget.PullToRefreshView>

</LinearLayout>