<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mi_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:padding="5dp" >

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/Color_Black" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@color/cache_color_hint"
        android:visibility="gone" >
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Color_White"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/main_page" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/framePcenter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp" >

            <ImageView
                android:id="@+id/imgHead"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/com_facebook_profile_picture_blank_square" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="可心" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:text="@string/person_info"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Color_White"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvPersoninfo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/person_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/tvGuanyu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/guanyu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/banbengengxin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:padding="3dp" />

        <TextView
            android:id="@+id/tvClearCache"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/clear_cache" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/zhuxiao"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Color_White"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvZhuxiao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/zhuxiao" />
    </LinearLayout>

</LinearLayout>